login and activate
